Archive2/dd/0f3583de14efe8/output
main.cpp: In function 'int main()':
main.cpp:36:15: error: request for member 'tprintf' in 'someClass', which is of non-class type 'SomeClass()'
     someClass.tprintf("% world% %\n", "Hello", '!', 123);
               ^
